--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "license": "MIT",
     "description": "",
     "dependencies": {
+        "@slack/webhook": "^7.0.5",
         "bcryptjs": "^3.0.2",
         "cross-env": "^7.0.3",
         "dotenv": "^16.4.7",
@@ -20,8 +21,10 @@
         "js-doc": "^0.5.0",
         "jsonwebtoken": "^9.0.2",
         "mongoose": "^8.12.1",
+        "morgan-body": "^2.6.9",
         "multer": "^1.4.5-lts.1",
         "nodemailer": "^6.10.0",
+        "pdfkit": "^0.17.0",
         "swagger-jsdoc": "^6.2.8",
         "swagger-ui-express": "^5.0.1",
         "wrappedjs": "^2.0.7"
