--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,7 @@ PORT=''     # 3000
 
 # MongoDB
 MONGO_URI='' # <protocol>://<user>:<password>@<domain>/<database_name>
+MONGO_URI_TEST=''
 
 # Security
 JWT_SECRET='' # 64 characters hex string
@@ -22,7 +23,10 @@ GMAIL_REFRESH_TOKEN='' # Your Gmail refresh token
 REDIRECT_URI='' # https://developers.google.com/oauthplayground
 
 # Pinata
-PINATA_GATEWAY='' 
-PINATA_KEY='' 
-PINATA_SECRET='' 
-PINATA_JWT='' 
+PINATA_GATEWAY=''
+PINATA_KEY=''
+PINATA_SECRET=''
+PINATA_JWT=''
+
+# Slack
+SLACK_WEBHOOK_URL=''
